--- a/contact.html
+++ b/contact.html
@@ -1,57 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Brietta </title>
-  <link rel="stylesheet" type="text/css" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Contact</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
+    <ul class="nav justify-content-end"></ul>
+    <ul class="nav nav-pills">
+        <li class="nav-item">
+        <a class="nav-link active" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contact</a>
+        </li>   
+    </ul>
+    </ul>
+    <div id="xcontainer" class="container-fluid">
+        <section class="main-section">
+          <br>
+          <h1>Contact Me</h1>
+          <div class="row">
+            <div class="col-lg">
+                    <form>
+                            <div class="form-group">
+                              <label for="exampleFormControlInput1">Email address</label>
+                              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                            </div>
+                            <div class="form-group">
+                                    <label for="exampleFormControlInput1">Your Name</label>
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Jane Doe">
+                                  </div>
 
-<body>
-
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Brietta Smith</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Contact</h1>
-
-      <form id="contact-form">
-        <ul>
-          <li>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Brietta Smith" required="required">
-          </li>
-          <li>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-          </li>
-          <li>
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required="required"></textarea>
-          </li>
-        </ul>
-        <input type="submit">
-      </form>
-
-    </section>
-
-  </div>
-
-  <footer>
-    <div class="container">
-      Copyright &copy; 
-    </div>
-  </footer>
-</body>
-
-</html>
+                            <div class="form-group">
+                              <label for="exampleFormControlTextarea1">Message</label>
+                              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                          </form>
