--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,57 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html lang="en-us">
-
 <head>
-  <meta charset="UTF-8">
-  <title>Contact</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <meta charset="/UTF-8">
+    <title>Contact</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> 
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">  -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-    <ul class="nav justify-content-end"></ul>
-    <ul class="nav nav-pills">
-        <li class="nav-item">
-        <a class="nav-link active" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-        </li>   
-    </ul>
-    </ul>
-    <div id="xcontainer" class="container-fluid">
-        <section class="main-section">
-          <br>
-          <h1>Contact Me</h1>
-          <div class="row">
-            <div class="col-lg">
-                    <form>
-                            <div class="form-group">
-                              <label for="exampleFormControlInput1">Email address</label>
-                              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                            </div>
-                            <div class="form-group">
-                                    <label for="exampleFormControlInput1">Your Name</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Jane Doe">
-                                  </div>
+<body>
+    <header>
+        <div class="headerGroup">
+            <div class="headerBackground">
+                <h1>Brietta Smith</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-                            <div class="form-group">
-                              <label for="exampleFormControlTextarea1">Message</label>
-                              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                            </div>
-                          </form>
+    <div class="container">
+        <section id="contact">
+            <h2>Contact</h2>
+            <div class="largeLine"></div>
+            <form>
+                <label>Name</label>
+                <input type="text" name="name" placeholder="Lisa Taylor">
+                <label>Email</label>
+                <input type="email" name="email" placeholder="myemail@gmail.com">
+                <label>Message</label>
+                <textarea id="message"></textarea>
+                <input class="button" type="submit">
+            </form>
+        </section>
+
+        <section class="ConnectWithMe">
+            <h3>Connect with Me</h3>
+            <div class="smallLine"></div>
+            <div class="imageContainer">
+                <a target="_blank" href="https://github.com/umbercoder"><img src="https://png.icons8.com/nolan/50/000000/github.png"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/Brietta-Smith"><img src="https://png.icons8.com/nolan/50/000000/linkedin.png"></a>
+            </div>
+        </section>
+    </div>
+
+    <footer>
+        <p>Copyright 2018 Brietta Smith</p>
+    </footer>
+    
+</body>
+</html>
