--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,15 @@
 <!DOCTYPE>
 <html lang="en-us">
+
 <head>
     <meta charset="/UTF-8">
-    <title>Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> 
+    <title>Contact</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">  -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">         
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <header>
         <div class="headerGroup">
@@ -16,59 +18,84 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li>
+                        <a href="index.html">About</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </div>
     </header>
-
-    <div class="container">
-        <section id="portfolio">
-            <h2>Portfolio</h2>
-            <div class="largeLine"></div>
-                <div class="grid">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <a href="#"><img src="assets/images/gallery1.jpg" alt="Background Technology Photo for Hangman"></a>
-                            <a href="#"><div class="galleryLabel"><h4>Hangman</h4></div></a>
-                        </div>
-                        <div class="col-sm-6">
-                            <a href="#"><img src="assets/images/gallery2.jpg" alt="Background Technology Photo for RPG Game"></a>
-                            <a href="#"><div class="galleryLabel"><h4>RPG Game</h4></div></a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <a href="#"><img src="assets/images/trivia.jpg" alt="Background Technology Photo for Trivia Game"></a>
-                            <a href="#"><div class="galleryLabel"><h4>Trivia Game</h4></div></a>
-                        </div>
-                        <div class="col-sm-6">
-                            <a href="#"><img src="assets/images/gallery4.jpg" alt="Background Technology Photo for Rutgers Info Widget"></a>
-                            <a href="#"><div class="galleryLabel"><h4>Rutgers Info Widget</h4></div></a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <a href="#"><img src="assets/images/gallery5.jpg" alt="Background Technology Photo for Rock Paper Scissors"></a>
-                            <a href="#"><div class="galleryLabel"><h4>Rock Paper Scissors</h4></div></a>
-                        </div>
-                    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <a href="#">
+                <img src="assets/images/red-crystal.jpg" alt="Gems Game" height="100" width="100">
+            </a>
+            <a href="#">
+                <div class="galleryLabel">
+                    <h4>RPG Game</h4>
                 </div>
-            </section>
-
-            <section class="ConnectWithMe">
-                <h3>Connect with Me</h3>
-                <div class="smallLine"></div>
-                <div class="imageContainer">
-                    <a target="_blank" href="https://github.com/umbercoder"><img src="https://png.icons8.com/nolan/50/000000/github.png"></a>
-                    <a target="_blank" href="https://www.linkedin.com/in/Brietta-Smith"><img src="https://png.icons8.com/nolan/50/000000/linkedin.png"></a>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <a href="#">
+                <img src="assets/images/trivia.jpg" alt="Background Technology Photo for Trivia Game" height="100" width="100">
+            </a>
+            <a href="#">
+                <div class="galleryLabel">
+                    <h4>Trivia Game</h4>
                 </div>
-            </section>
+            </a>
+        </div>
+        <div class="col-sm-6">
+            <a href="#">
+                <img src="assets/images/gallery4.jpg" alt="Background Technology Pho">
+            </a>
+            <a href="#">
+                <div class="galleryLabel">
+                    <h4>Rutgers Info Widget</h4>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <a href="#">
+                <img src="assets/images/gallery5.jpg" alt="Background Technology Photo for Rock Paper Scissors">
+            </a>
+            <a href="#">
+                <div class="galleryLabel">
+                    <h4>Rock Paper Scissors</h4>
+                </div>
+            </a>
+        </div>
+    </div>
+    </div>
+    </section>
+
+    <section class="ConnectWithMe">
+        <h3>Connect with Me</h3>
+        <div class="smallLine"></div>
+        <div class="imageContainer">
+            <a target="_blank" href="https://github.com/umbercoder">
+                <img src="https://png.icons8.com/nolan/50/000000/github.png">
+            </a>
+            <a target="_blank" href="https://www.linkedin.com/in/Brietta-Smith">
+                <img src="https://png.icons8.com/nolan/50/000000/linkedin.png">
+            </a>
+        </div>
+    </section>
     </div>
     <footer>
         <p>Copyright 2018 Brietta Smith</p>
     </footer>
 </body>
+
 </html>
