--- a/Index.html
+++ b/Index.html
@@ -30,10 +30,10 @@
             <div class="largeLine"></div>
             <div id="marginLine"></div>
             <img src="assets/images/me.jpg" id="profilePhoto" alt="Me">
-            <p>Brietta Smith is a Software Quality Professional for <a href="http://Hiscox.com/" target="_blank">Hiscox</a>, where she is responsible for the testing and quality delivery for all off the USA.  Brietta has been in the Quality industry for over 17 years with experience in the Finanical, Payments, Insurance, Retail, Fuel and Video sectors.  Known for building team, increasing effienciency and productivity, Brietta is well respected and seen as a thought leader within the industry.</p>
+            <p>Brietta Smith is a Software Quality Professional for <a href="http://Hiscox.com/" target="_blank">Hiscox</a>, where she is responsible for the testing and quality delivery for all of the USA.  Brietta has been in the Quality industry for over 17 years with experience in the Finanical, Payments, Insurance, Retail, Fuel and Video sectors.  Known for building team, increasing effienciency and productivity, Brietta is well respected and seen as a thought leader within the industry.</p>
             <p>Begining her career in Development more than 15 years ago, Brietta has need to revamp her skills in a constant evolving world was necessary. Thus enrolling in the <a href="https://bootcamp.pe.gatech.edu/" target="_blank">Full Stack Development BootCamp </a> at Georgia Tech.  She hopes to use the skills obtaining in this bootcamp towards contributing to the Digital Transformation that is occuring in Quality.  Quality is no longer just about testing but about the expericene and all the technoligies that makeup that journey.</p> 
             <p>In her free time, Brietta likes to travel, make candles, read useless trivia or just do nothing. </p>
-            <p>Brietta holds a <a href="https://uncg.edu/" target="_blank">BS in Marketing</a>.  She is hold a <a href="https://asq.org/cert/software-quality-engineer" target="_blank">CSQE Certification.</a> Brietta is also a Certified Scrum Master and Certified SaFe Agilist.</p>
+            <p>Brietta holds a <a href="https://uncg.edu/" target="_blank">BS in Marketing</a> and a <a href="https://asq.org/cert/software-quality-engineer" target="_blank">CSQE Certification.</a> Brietta is also a Certified Scrum Master and Certified SaFe Agilist.</p>
         </section>
 
         <section class="ConnectWithMe">
