--- a/portfolio.html
+++ b/portfolio.html
@@ -31,68 +31,80 @@
             </nav>
         </div>
     </header>
-    <div class="row">
-        <div class="col-sm-6">
-            <a href="#">
-                <img src="assets/images/red-crystal.jpg" alt="Gems Game" height="100" width="100">
-            </a>
-            <a href="#">
-                <div class="galleryLabel">
-                    <h4>RPG Game</h4>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <a href="#">
-                <img src="assets/images/trivia.jpg" alt="Background Technology Photo for Trivia Game" height="100" width="100">
-            </a>
-            <a href="#">
-                <div class="galleryLabel">
-                    <h4>Trivia Game</h4>
-                </div>
-            </a>
-        </div>
-        <div class="col-sm-6">
-            <a href="#">
-                <img src="assets/images/gallery4.jpg" alt="Background Technology Pho">
-            </a>
-            <a href="#">
-                <div class="galleryLabel">
-                    <h4>Rutgers Info Widget</h4>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <a href="#">
-                <img src="assets/images/gallery5.jpg" alt="Background Technology Photo for Rock Paper Scissors">
-            </a>
-            <a href="#">
-                <div class="galleryLabel">
-                    <h4>Rock Paper Scissors</h4>
-                </div>
-            </a>
-        </div>
-    </div>
-    </div>
-    </section>
 
-    <section class="ConnectWithMe">
-        <h3>Connect with Me</h3>
-        <div class="smallLine"></div>
-        <div class="imageContainer">
-            <a target="_blank" href="https://github.com/umbercoder">
-                <img src="https://png.icons8.com/nolan/50/000000/github.png">
+    <div class="container">
+        <section class="project">
+            <div class="row">
+                <div class="col-sm-6">
+                    <a href="https://umbercoder.github.io/unit-4-game/">
+                        <img src="assets/images/red-crystal.jpg" alt="Gems Game" height="200" width="200">
+                    </a>
+                    <a href="#">
+                        <div class="row">
+                            <div class="galleryLabel">
+                                <h4>RPG Game</h4>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6">
+                    <a href="https://serene-thicket-38227.herokuapp.com">
+                        <img src="assets/images/friend.jpg" alt="Friend Game" height="200" width="200">
+                    </a>
+                    <a href="#">
+                        <div class="row">
+                            <div class="galleryLabel">
+                                <h4>Friend Finder Game</h4>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <a href="https://still-bayou-23633.herokuapp.com">
+                    <img src="assets/images/memory.jpeg" alt="Memory Game" height="200" width="200">
+                </a>
+                <a href="#">
+                    <div class="row">
+                        <div class="galleryLabel">
+                            <h4>Memory Game</h4>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+            <div class="col-sm-6">
+                <a href="https://lit-cliffs-83008.herokuapp.com/">
+                    <img src="assets/images/newspapers.jpg" alt="scrape" height="200" width="200">
+                </a>
+                <a href="#">
+                    <div class="row"></div>
+                    <div class="galleryLabel">
+                        <h4>News Scraper</h4>
+                    </div>
+            </div>
             </a>
-            <a target="_blank" href="https://www.linkedin.com/in/Brietta-Smith">
-                <img src="https://png.icons8.com/nolan/50/000000/linkedin.png">
-            </a>
-        </div>
-    </section>
+
+        </section>
+
+
+
+        <section class="ConnectWithMe">
+            <h3>Connect with Me</h3>
+            <div class="smallLine"></div>
+            <div class="imageContainer">
+                <a target="_blank" href="https://github.com/umbercoder">
+                    <img src="https://png.icons8.com/nolan/50/000000/github.png">
+                </a>
+                <a target="_blank" href="https://www.linkedin.com/in/Brietta-Smith">
+                    <img src="https://png.icons8.com/nolan/50/000000/linkedin.png">
+                </a>
+            </div>
+        </section>
     </div>
+
     <footer>
         <p>Copyright 2018 Brietta Smith</p>
     </footer>
